2008-08-12  Sam Weinig  <sam@webkit.org>

        * fast/dom/Window/window-properties-expected.txt: Update results.

2008-08-12  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19348
          <rdar://problem/5978447> REGRESSION (r34193): Setting the size of a frame with javascript document.body.row no longer works

        * fast/frames/frameset-style-recalc.html: Added.
        * platform/mac/fast/frames/frameset-style-recalc-expected.checksum: Added.
        * platform/mac/fast/frames/frameset-style-recalc-expected.png: Added.
        * platform/mac/fast/frames/frameset-style-recalc-expected.txt: Added.

2008-08-12  Nikolas Zimmermann  <zimmermann@kde.org>

        Rubber stamped by Anders.

        Add new dynamic-update layout tests covering SVGCursorElement.

        Scale svg/webarchive/resources/green-checker.png to a value < 128x128,
        as this is the maximum hardcoded cursor size (fixes manual testing of svg-cursor-subresources.svg).

        * platform/mac/svg/dynamic-updates/SVGCursorElement-dom-x-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-dom-x-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-dom-y-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-dom-y-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-svgdom-x-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-svgdom-x-prop-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-svgdom-y-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGCursorElement-svgdom-y-prop-expected.png: Added.
        * svg/dynamic-updates/SVGCursorElement-dom-x-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGCursorElement-dom-x-attr.html: Added.